Adjust post progress bar position

--- a/scss/common/_topic-post.scss
+++ b/scss/common/_topic-post.scss
@@ -667,7 +667,7 @@ nav {
   width: auto;
 
   &.docked {
-    margin-bottom: ($spacer-lg + 1);
+    margin-bottom: $spacer-lg;
     right: 0;
 
     .topic-admin-popup-menu {
