Add a natural gap between user name and msg in notification

--- a/scss/common/_user.scss
+++ b/scss/common/_user.scss
@@ -481,6 +481,10 @@
       div {
         align-items: flex-start;
         display: flex;
+
+        span {
+          margin-right: $spacer-xs;
+        }
       }
 
       p {
