--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -130,6 +130,11 @@
   border-left: 0;
   padding: 0 0 0 $spacer-lg;
   width: 80%;
+
+  @media (max-width: 700px) {
+    padding-left: 0;
+    width: 100%;
+  }
 }
 
 .admin-list-item {
@@ -146,6 +151,11 @@
   margin-top: 0;
   margin-bottom: 0;
   width: 20%;
+
+  @media (max-width: 700px) {
+    padding-right: $spacer-lg;
+    width: 50%;
+  }
 }
 
 .admin-title {
