Apply Select2 fix to all default Select2 components

--- a/scss/common/_admin.scss
+++ b/scss/common/_admin.scss
@@ -977,8 +977,10 @@ div {
 
       .select2-container {
         margin-bottom: $card-inner-spacer-x;
-        max-width: 100%;
-        width: auto !important;
+
+        &.combobox {
+          width: auto !important;
+        }
       }
 
       .select2-container-multi {
