--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -412,6 +412,7 @@ $thead-font-size:          12px !default;
 
 // Text field
 
+$text-field-bg-disabled:                 #f4f4f4 !default; // same value as the disabled Select2 background colour
 $text-field-border-color-dark:           rgba(255, 255, 255, .7) !default;
 $text-field-border-color-light:          rgba(0, 0, 0, .42) !default;
 $text-field-border-color-disabled-dark:  rgba(255, 255, 255, .5) !default;
