Reset styles on `.header-buttons` in `.d-header`

--- a/scss/common/_header.scss
+++ b/scss/common/_header.scss
@@ -90,6 +90,12 @@
     }
   }
 
+  .header-buttons {
+    align-items: center;
+    display: flex;
+    margin-top: 0;
+  }
+
   .icons {
     align-items: center;
     display: flex;
